--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@ body {
 }
 
 .container-1 {
-    padding-left: 200px;
-    padding-right: 200px;
+    padding-left: 300px;
+    padding-right: 300px;
     background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
     display: flex;
     flex-direction: row;
-    margin-right: auto;
 }
 
 .heading {
@@ -37,4 +38,66 @@ ul {
 
 li {
     display: inline;
+}
+
+.hero-content {
+    display: flex;
+    flex-direction: row;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    flex-basis: 200px;
+    flex-grow: 1;
+    align-items: flex-start;
+    width: 1279px;
+}
+
+.box-1 {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.box-2 {
+    flex-grow: 1;
+    flex-basis: 0;
+    height: 248.16px;
+}
+
+.text-1 {
+    width: 400px;
+}
+
+.text-2 {
+    width: 450px;
+}
+
+.text-1 > h1 {
+    font-size: 48px;
+    color: #f9faf8;
+    margin-bottom: 0;
+    text-wrap: wrap;
+}
+
+.text-2 > p {
+    color: #e5e7eb;
+    margin-top: 0;
+    font-size: 18px;
+    text-wrap: wrap;
+}
+
+.hero-button {
+    height: 30px;
+    width: 100px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: 550;
+}
+
+.box-2 {
+    background-color: grey;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
