--- a/style.css
+++ b/style.css
@@ -101,3 +101,45 @@ li {
     justify-content: center;
     align-items: center;
 }
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+
+.blue-boxes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+}
+
+.box > p {
+    text-align: center;
+}
+
+.box {
+    height: 200px;
+    width: 150px;
+}
+
+.info {
+    width: auto;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.info > h1 {
+    font-size: 36px;
+    font-weight: 1000;
+}
+
+.blue-box {
+    height: 150px;
+    width: 150px;
+    border: 3px solid #3882f6;
+    border-radius: 15px;
+}
