--- a/style.css
+++ b/style.css
@@ -143,3 +143,29 @@ li {
     border: 3px solid #3882f6;
     border-radius: 15px;
 }
+
+.container-3 {
+    background-color: #e5e7eb;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 350px;
+    padding-right: 350px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    width: 800px;
+    font-size: 36px;
+    font-style: italic;
+    columns: #1f2937;
+}
+
+.by {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
